# rover-software

./: .gitignore  GUI - ROVER.py  GUI - drone.py  GUI_v2 - drone.py  README.md  imgui.ini  launch powershell.bat
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-image.yml  docs.yml
docker/: Dockerfile  Dockerfile-base  Dockerfile-rover  Dockerfile.deploy  attach.sh  build-base.sh  build.sh  common.yaml  docker-compose.new.yaml  docker-compose.yaml  entrypoint.deploy.sh  entrypoint.new.sh  entrypoint.sh  run-new.sh  run.new.sh  run.sh  stop.sh
docker/configs/: SN35803121.conf  SN37915676.conf
docker/triton_models/IQL_depth_224_224/: config.pbtxt
docker/triton_models/IQL_depth_90_160/: config.pbtxt
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/deployment/: building.md  development-vs-production.md  overview.md  production.md  troubleshooting.md
localization_stack/: CMakeLists.txt  package.xml
manipulation_stack/: CMakeLists.txt  package.xml
mission_control/: CMakeLists.txt  package.xml
mission_control/launch/: physical_rover.launch.py  software_rover.launch.py
mission_control/scripts/: joystick.py
navigation_stack/: CMakeLists.txt  package.xml
perception_stack/: CMakeLists.txt  README.md
perception_stack/docs/: Nodes.md
perception_stack/scripts/: aruco_extractor_node.py  pseodu_camera_delete.py
space_interface/: README.md  package.xml
src/localization_stack/: package.xml
src/manipulation_stack/: package.xml
src/manipulator/: README.md
src/mission_control/: CMakeLists.txt
src/navigation_stack/: CMakeLists.txt  package.xml
src/perception_stack/: CMakeLists.txt  package.xml
src/rover/gorm_bringup/: setup.cfg  (+2 more)
src/rover/gorm_web_interface/: README.md  package.xml  setup.cfg  setup.py
src/rover/gorm_web_interface/gorm_web_interface/: web_server.py
src/rover/gorm_web_interface/launch/: web_interface.launch.py
src/rover/gorm_web_interface/resource/: gorm_web_interface
src/rover/gorm_web_interface/web/: index.html
src/rover/hardware/: CMakeLists.txt  package.xml
src/rover/hardware/launch/: ackermann.launch.py  cameras.launch.py  hardware.launch.py  joy_node.launch.py  motor.launch.py
src/rover/hardware/scripts/: motor_status.py  motors.py  pose_transform.py
src/space_interface/: CMakeLists.txt
(+55 files in other folders)
