<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gorm_web_interface</name>
  <version>0.0.0</version>
  <description>Web interface for GORM rover motor control and monitoring</description>
  <maintainer email="todo@todo.com">GORM Team</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>rosbridge_server</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
